# chordpro-studio

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json
.agents/skills/breakdown-feature/: SKILL.md
.agents/skills/capture-item/: SKILL.md
.agents/skills/debug-root-cause/: SKILL.md
.agents/skills/design-spec/: SKILL.md
.agents/skills/implement-feature/: SKILL.md
.agents/skills/plan-version/: SKILL.md
.agents/skills/refine-item/: SKILL.md
.agents/skills/release-workflow/: SKILL.md
.codex/: config.toml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/prompts/: conversion.prompt.md
app/scripts/: tauri-runner.mjs
app/src/: App.vue
app/src/services/: contracts.ts
app/src/utils/: PromptLoader.ts  index.ts
app/tests/: regression.test.ts
docs/: architecture.md  bug-tracker.md  cleaning-rules.md  dev-notes.md  domain-model.md  git-workflow.md  idea.md  mvp.md  prompt-design-notes.md  prompts.md  roadmap.md
resources/chordpro/: MANIFEST  META.yml  README.md  style.json
resources/chordpro-studio/: style.json
resources/chordpro/lib/: Config.pm  Config_heavy.pl  Cwd.pm  DynaLoader.pm  Encode.pm  Errno.pm  Exporter.pm  Fcntl.pm  IO.pm  Win32.pm  XSLoader.pm  attributes.pm  builtin.pm  bytes.pm  parent.pm  strict.pm  warnings.pm
resources/chordpro/script/: main.pl
scripts/: regression.js  smoke.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: chordpro_cli.rs  config.rs  lib.rs  main.rs  smoke.rs
tools/stitch-mcp/: README.md  package.json
(+103 files in other folders)
