[package]
name = "chordpro-studio"
version = "0.1.0"
description = "Desktop-first ChordPro Studio"
authors = ["ChordPro Studio"]
license = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
